# CoderBox

./: CMakeLists.txt  CoderBox.cpp  CoderBox.h  LICENSE  UltraIDE.cpp  UltraIDE.h  main.cpp
Debug/Breakpoints/: UCBreakpointManager.cpp  UCDebugManager.cpp  UCGDBMIParser.cpp  UCGDBPlugin.cpp  UCGDBPluginCommands.cpp  UCGDBPluginInspection.cpp  UCGDBProcess.cpp  UCLLDBPlugin.cpp  UCWatchManager.cpp  UCWatchManager.h
Debug/Core/: IUCDebuggerPlugin.h  UCDebugManager.h  UCDebuggerPluginRegistry.h
Debug/DAP/: UCDAPClient.cpp  UCDAPClient.h  UCDAPServer.cpp  UCDAPServer.h  UCDAPTypes.cpp  UCDAPTypes.h
Debug/Editor/: UCCurrentLineHighlighter.cpp  UCCurrentLineHighlighter.h  UCDebugEditorIntegration.cpp  UCDebugEditorIntegration.h  UCDebugGutterRenderer.cpp  UCDebugGutterRenderer.h  UCHoverEvaluator.cpp  UCHoverEvaluator.h
Debug/Exeptions/: UCExceptionDialog.cpp  UCExceptionDialog.h  UCExceptionManager.cpp  UCExceptionManager.h  UCSignalHandler.cpp  UCSignalHandler.h
Debug/GDB/: UCGDBMIParser.h  UCGDBPlugin.h  UCGDBProcess.h  UCLLDBPlugin.h
Debug/Launch/: UCLaunchConfigDialog.cpp  UCLaunchConfigDialog.h  UCLaunchConfigManager.cpp  UCLaunchConfigManager.h  UCLaunchConfiguration.cpp  UCLaunchConfiguration.h
Debug/Stack/: UCStackFrame.h
Debug/Testing/: UCCatch2Adapter.cpp  UCCatch2Adapter.h  UCGoogleTestAdapter.cpp  UCGoogleTestAdapter.h  UCTestDebugger.cpp  UCTestDebugger.h  UCTestExplorerPanel.cpp  UCTestExplorerPanel.h
Debug/Types/: UCDebugEnums.h  UCDebugForward.h  UCDebugStructs.h
Debug/UI/: UCBreakpointPanel.cpp  UCBreakpointPanel.h  UCCallStackPanel.cpp  UCCallStackPanel.h  UCDebugConsole.cpp  UCDebugConsole.h  UCDebugToolbar.cpp  UCDebugToolbar.h  UCDisassemblyPanel.cpp  UCDisassemblyPanel.h  UCMemoryPanel.cpp  UCMemoryPanel.h  UCRegistersPanel.cpp  UCRegistersPanel.h  UCThreadsPanel.cpp  UCThreadsPanel.h  UCVariablesPanel.cpp  UCVariablesPanel.h
Debug/Variables/: UCDebugVariable.h
Project/: UCIDEProject.cpp  UCIDEProject.h  UCIDEProjectTreeView.cpp  UCIDEProjectTreeView.h
Rendering/: UCIDERenderContext.cpp  UCIDERenderContext.h  UCIDERenderContext_Part2.cpp  UCIDEWindow.cpp  UCIDEWindow_Part2.cpp
UI/: UCCoderBox_Core.cpp  UCCoderBox_Core.h  UCCoderBox_Menu.cpp  UCCoderBox_Theme.cpp  UCCoderBox_Window.cpp
